# TrueTypeTest

./: Base.cpp  Base.h  Bitmap.cpp  Bitmap.h  ByteEncodingTable.cpp  ByteEncodingTable.h  CMakeLists.txt  CmapTable.cpp  CmapTable.h  FontUtils.cpp  FontUtils.h  GTrueType_defs.h  Glyph.cpp  Glyph.h  GlyphData.cpp  GlyphData.h  HeadTable.cpp  HeadTable.h  HheaTable.cpp  HmtxTable.cpp  HmtxTable.h  LocaTable.cpp  LocaTable.h  Makefile  MaxpTable.cpp  MaxpTable.h  README.md  SegmentMappingTable.cpp  SegmentMappingTable.h  Tables.h  main.cpp  utils.cpp  utils.h
truetype/: Base.cpp  Base.h  ByteEncodingTable.cpp  ByteEncodingTable.h  CmapTable.cpp  GTrueType_defs.h  GlyphData.cpp  GlyphData.h  HeadTable.cpp  HeadTable.h  HheaTable.cpp  HheaTable.h  HmtxTable.cpp  LocaTable.cpp  MaxpTable.cpp  MaxpTable.h  SegmentMappingTable.cpp  SegmentMappingTable.h
